# perturbation-assignment

./: LICENSE  README.md  camb_example.ipynb  environment_setup.ipynb  perturbation-assignment.ipynb  pyproject.toml
cosmo_perturbations/: fiducial_parameters.py  solvers.py
cosmo_perturbations/tests/: test_solvers.py
hello_world/: hello_world.py
hello_world/tests/: test_hello_world.py
