[tool.poetry]
name = ""cosmo_perturbations"
version = "0.1"
description = "Cosmological perturbation theory assignment"
authors = ["Kiyoshi Masui <kmasui@mit.edu>"]
packages = [
    {include = "cosmo_perturbations"}
    ]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^3.0"
scipy = "^1.4.1"
matplotlib = "^3.1.1"
